fix place hold button position on mobile

--- a/themes/finna2/less/finna/holdings.less
+++ b/themes/finna2/less/finna/holdings.less
@@ -425,7 +425,7 @@
     & .actions {
         float: right;
         & .title-hold {
-            float: right;
+            float: left;
             margin-top: 10px;
         }
         & .all-holdings {
